--- a/survey/templates/base4.html
+++ b/survey/templates/base4.html
@@ -40,8 +40,11 @@
 <body>
 <div class="app-container app-theme-white body-tabs-shadow fixed-header fixed-sidebar">
     <div class="app-header header-shadow">
-        <div class="" style="font-size: 25px;">
-            <a href="/"><i class="pe-7s-back"> </i> Go to the Knowledge Tracker</a>
+        <div class="app-header__logo" style="">
+            <img src="/static/images/logo.png" style="width: 45px; height: 45px;" />
+            <a style="font-size: 1.25rem; font-weight: 400; padding-left: 15px;">Massage Bank</a>
+            <!--<div class="logo-src"></div>-->
+            <!--<a href="/"><i class="pe-7s-back"> </i> Go to the Knowledge Tracker</a>-->
         </div>
         <div class="app-header__mobile-menu">
             <div>
