--- a/survey/templates/base4.html
+++ b/survey/templates/base4.html
@@ -42,7 +42,7 @@
     <div class="app-header header-shadow">
         <div class="app-header__logo" style="">
             <img src="/static/images/logo.png" style="width: 45px; height: 45px;" />
-            <a style="font-size: 1.25rem; font-weight: 400; padding-left: 15px;">Massage Bank</a>
+            <a style="font-size: 1.25rem; font-weight: 400; padding-left: 15px;">Message Bank</a>
             <!--<div class="logo-src"></div>-->
             <!--<a href="/"><i class="pe-7s-back"> </i> Go to the Knowledge Tracker</a>-->
         </div>
