--- a/survey/templates/dashboard.html
+++ b/survey/templates/dashboard.html
@@ -39,14 +39,14 @@
 </style>
 
 <div class="app-page-title"><div class="page-title-wrapper"><div class="page-title-heading"><div class="page-title-icon"><i class="icon pe-7s-server icon-gradient bg-ripe-malin"></i></div><div>
-    Massage List
+    Message List
     <div class="page-title-subheading">
                                     </div>
 </div></div><div class="page-title-actions">
 <div class="widget-chart widget-chart2 text-left card-btm-border card-shadow-primary border-primary card">
                                 <div class="widget-chat-wrapper-outer">
                                     <div class="widget-chart-content">
-                                        <div class="widget-title opacity-5 text-uppercase">Total Massages</div>
+                                        <div class="widget-title opacity-5 text-uppercase">Total Messages</div>
                                         <div class="widget-numbers mt-2 fsize-4 mb-0 w-100">
                                             <div class="widget-chart-flex align-items-center">
                                                 <div>
